--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -49,6 +49,7 @@ New features:
 - 3466445: Upgrade Apache POI to 3.8	
 
 Bug fixes:
+- 3531057: crawling always fails when using proxy
 - 3531279: Epected='obj' actual='o' error while parsing the PDF	
 - 3527244: URL filter does not work for jsessionid
 - 3521414: File not parsed in database crawler
