--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 OpenSearchServer 1.3
 
 New features:
+- 3537132: JBIG2 format support for PDF text extraction
 - 3535780: Classifier feature
 - 3535777: SOAP WebService
 - 3523453: Image Parser with OCR
