--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,9 @@ http://sourceforge.net/tracker/?group_id=260863
 OpenSearchServer 1.3
 
 New features:
+- 3539147: URL and FILE database scheduler task
+- 3539146: Tag boost in HTML parser	
+- 3539144: A number format filter	
 - 3537132: JBIG2 format support for PDF text extraction
 - 3535780: Classifier feature
 - 3535777: SOAP WebService
