--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 OpenSearchServer 1.3
 
 New features:
+- 238: Job called when crawl session ends
 - 237: Transaction isolation level should editable
 - 236: Default value in the Classifier
 - 235 Named entity recognition
