--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -10,6 +10,7 @@ http://sourceforge.net/p/opensearchserve/bug-report/
 OpenSearchServer 1.3.1
 
 Bug fixes:
+- 155:Trigger name cannot be null error when clicking optimize
 - 153: Failed replication from Windows to Linux because of file separator
 
 OpenSearchServer 1.3
