--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -13,6 +13,7 @@ New features:
 - 240 Several HTML parser configuration per index
 
 Bug fixes:
+- 157: NullPointerException while deleting documents from web crawler
 - 156: Cannot forcefully unlock a NativeFSLock error
 - 155: Trigger name cannot be null error when clicking optimize
 - 153: Failed replication from Windows to Linux because of file separator
