--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,11 @@ All new features and bugs are described here:
 http://sourceforge.net/p/opensearchserve/feature-request/
 http://sourceforge.net/p/opensearchserve/bug-report/
 
+OpenSearchserver 1.4
+
+New features:
+- 246 Named entity recognition based on a search request
+
 OpenSearchServer 1.3.1
 
 New features:
