--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -10,7 +10,10 @@ http://sourceforge.net/p/opensearchserve/bug-report/
 OpenSearchserver 1.4
 
 New features:
-- 246 Named entity recognition based on a search request
+- 249: Extraction of user and group rights when crawling CIFS/SMB and FTP
+- 248: Upgrade ZK CE to 6.5
+- 247: Support of additional characters in LetterOrDigitTokenizer
+- 246: Named entity recognition based on a search request
 
 OpenSearchServer 1.3.1
 
