--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -21,6 +21,13 @@ New features:
 - 245: Highlighting in PDF documents and images (OCR)
 - 243: RSS Parser
 
+Bug fixes:
+- 170: Wrong file path in file crawler
+- 166: Query -> More like This causes  Property 'name' not found on type java.lang.String
+- 165: Not possible to copy an address in Crawler -> Web -> Pattern List
+- 163: Weight is ignored in query scoring item
+- 161: ParseException while crawling files
+
 OpenSearchServer 1.3.1
 
 New features:
